Post content type setup and basic theme templates displaying content.

--- a/themes/takeoff/layouts/post/single.html
+++ b/themes/takeoff/layouts/post/single.html
@@ -3,5 +3,10 @@
 {{ end }}
 {{ define "main" }}
     <h1>{{ .Title }}</h1>
+    <pre>
+        {{ with .Resources.GetMatch "hero" }}
+            <img src="{{ .Permalink }}"/>
+        {{ end }}
+    </pre>
     {{ .Content }}
 {{ end }}
