--- a/themes/takeoff/layouts/_default/baseof.html
+++ b/themes/takeoff/layouts/_default/baseof.html
@@ -1,11 +1,13 @@
-<!DOCTYPE html>
-<html>
-    {{- partial "head.html" . -}}
-    <body>
-        {{- partial "header.html" . -}}
-        <div id="content">
-        {{- block "main" . }}{{- end }}
-        </div>
-        {{- partial "footer.html" . -}}
-    </body>
+<!doctype html>
+<html class="no-js" lang="">
+    {{ partial "head.html" . }}
+<body>
+
+    <div id="content">
+    {{ block "main" . }}{{ end }}
+    </div>
+
+  {{ partial "footer.html" . }}
+</body>
+
 </html>
