--- a/themes/takeoff/layouts/_default/baseof.html
+++ b/themes/takeoff/layouts/_default/baseof.html
@@ -2,6 +2,7 @@
 <html class="no-js" lang="">
     {{ partial "head.html" . }}
 <body>
+    {{ partial "header.html" . }}
 
     <div id="content">
     {{ block "main" . }}{{ end }}
