--- a/themes/takeoff/layouts/partials/head.html
+++ b/themes/takeoff/layouts/partials/head.html
@@ -16,7 +16,7 @@
         'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
     })(window,document,'script','dataLayer','GTM-WZ7CHFB');</script>
     <!-- End Google Tag Manager -->
-    
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/main.css">
+
+    <link href="https://fonts.googleapis.com/css?family=Karla:400,400i,700" rel="stylesheet"> 
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
